secuirtyconfigの修正