@@ -1,6 +1,6 @@
 package com.example.Kanaeru_Back.config;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -11,7 +11,6 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
 @Configuration
 @EnableWebSecurity
@@ -20,7 +19,6 @@ public class SecurityConfig {
 	@Bean
 	public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 		http
-				// corsフィルタを有効化して、事前にCORS設定を適用する
 				.cors(cors -> cors.configurationSource(corsConfigurationSource()))
 				.csrf(csrf -> csrf.disable())
 				.authorizeHttpRequests(auth -> auth
@@ -32,27 +30,31 @@ public class SecurityConfig {
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		// 本番環境とローカル環境のオリジンを明示的に指定
-		configuration.setAllowedOrigins(List.of(
+		
+		// デバッグ用ログ
+		System.out.println("=== CORS Configuration Loading ===");
+		
+		configuration.setAllowedOrigins(Arrays.asList(
 				"https://kanaeru.etomoji.co.jp",
 				"http://kanaeru.etomoji.co.jp",
 				"https://staging.kanaeru.etomoji.co.jp",
 				"http://staging.kanaeru.etomoji.co.jp",
 				"http://13.114.155.51:5180",
 				"http://35.74.40.37:5180",
-				"http://localhost:5180"));
-		configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-		configuration.setAllowedHeaders(List.of("*"));
+				"http://localhost:5180"
+		));
+		
+		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+		configuration.setAllowedHeaders(Arrays.asList("*"));
 		configuration.setAllowCredentials(true);
-
+		configuration.setMaxAge(3600L);
+		
+		System.out.println("Allowed Origins: " + configuration.getAllowedOrigins());
+		
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
 	}
 
-	// Spring Securityよりも先にCORS設定を適用するため、CorsFilterを明示的にBean登録
-	@Bean
-	public CorsFilter corsFilter() {
-		return new CorsFilter(corsConfigurationSource());
-	}
+	// CorsFilter のBean登録は削除（不要）
 }
